# safe-navigation

./: CMakeLists.txt  README.md  constraints.txt  package.xml  requirements.txt  setup.cfg  setup.py
config/: config.yaml
data/: random_points.csv
launch/: safeopt.launch.py
safe_navigation/: navigation_node.py  safeopt_node.py  test_data_client.py  visualization.py
srv/: AddDataPoint.srv
